--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
-    "moment": "^2.18.1",
     "mongoose": "^4.11.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.2"
   }
 }
