--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "express-validator": "^3.2.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.2",
     "passport": "^0.3.2",
