Improved user logging. Added sessions.

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "connect-flash": "^0.1.1",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "express-validator": "^3.2.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.2",
