--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node web application template complete with REST API and database support!",
   "main": "server.js",
   "scripts": {
-    "test": "jshint .",
+    "test": "jshint . ; nsp check",
     "start": "node server.js"
   },
   "repository": {
