--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
-    "express-messages": "^1.0.1",
     "express-session": "^1.15.3",
     "express-validator": "^3.2.1",
     "helmet": "^3.8.0",
     "moment": "^2.18.1",
     "mongoose": "^4.11.2",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.2"
