--- a/package.json
+++ b/package.json
@@ -44,25 +44,25 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
-    "express": "^4.16.1",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-validator": "^3.2.1",
-    "helmet": "^3.8.2",
-    "moment": "^2.19.3",
-    "mongoose": "^4.12.0",
-    "nodemailer": "^4.0.1",
+    "helmet": "^3.12.0",
+    "moment": "^2.22.1",
+    "mongoose": "^4.13.12",
+    "nodemailer": "^4.6.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.0-rc.2"
+    "pug": "^2.0.3"
   },
   "devDependencies": {
-    "eslint": "^4.5.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-react": "^7.7.0",
     "jshint": "^2.9.5",
-    "nodemon": "^1.12.1",
-    "nsp": "^3.1.0"
+    "nodemon": "^1.17.3",
+    "nsp": "^3.2.1"
   }
 }
