--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Node Web Application - Template!",
   "main": "template/server.js",
   "scripts": {
-    "test": "jshint . ; nsp check",
-    "start": "node template/server.js"
+    "start": "node template/server.js",
+    "lint": "jshint .",
+    "nsp": "nsp check"
   },
   "repository": {
     "type": "git",
@@ -62,7 +63,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.7.0",
     "jshint": "^2.9.5",
-    "nodemon": "^1.17.3",
+    "nodemon": "^1.17.4",
     "nsp": "^3.2.1"
   }
 }
